<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExerciseApp</string>
    <string name="workout_routines">Workout Routines</string>
    <string name="no_workouts">You have no workouts.</string>
    <string name="menu_insert_workout">Add Workout</string>
    <string name="enter_workout">Enter Workout</string>
    <string name="menu_home">Home</string>
    <string name="menu_view">View</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_insert_exercise">Add Exercise</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="confirm">Confirm</string>
    <string name="randomize">Randomize</string>
    <string name="cancel">Cancel</string>
    <string name="workout_routine_add_title">Add Workout</string>
    <string name="workout_routine_edit_title">Edit Workout</string>
    <string name="workout_routine_view_title">View Workout</string>
    <string name="workout_exercise_add_title">Add Exercise</string>
    <string name="no_exercises">You have no exercises.</string>
    <string name="select_exercise_category">1. Select Exercise Category.</string>
    <string name="choose_exercise">2. Choose an Exercise.</string>
    <string name="choose_category">Choose a Category.</string>
    <string name="q1">How many exercises in each category?</string>
    <string name="v1">3</string>
    <string name="c1">Warm Up</string>
    <string name="c2">Strength Training</string>
    <string name="c3">Cardio</string>
    <string name="num_exercises">/3</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_hint">Search for Exercises</string>
    <string name="add_record">Add Record</string>
    <string name="view_records">View Records</string>
    <string name="date">Date</string>
    <string name="enter_record">Enter in Record</string>
    <string name="change_date">Change the Date</string>
    <string name="time">Time</string>
    <string name="hr">hr</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="mi">mi</string>
    <string name="distance">Distance</string>
    <string name="set">Sets</string>
    <string name="rep">Reps</string>
    <string name="count">count</string>
    <string name="weight">Weight</string>
    <string name="lbs">lbs</string>
	<string name="comment">Comments</string>
    
    
    

</resources>