<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/q1"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/c1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/v1"
                android:inputType="numberDecimal"
                android:maxLength="3" />
             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/num_exercises"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c2"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/v2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/v1"
                android:inputType="numberDecimal"
                android:maxLength="3" />
             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/num_exercises"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/c3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c3"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/v3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:hint="@string/v1"
                android:inputType="numberDecimal"
                android:maxLength="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/num_exercises"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/randomize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/randomize" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>